--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -15,27 +15,32 @@ font:
   normal:
     #family: FiraMono Nerd Font Mono
     #family: Monofur for Powerline
-    family: Operator Mono
+    #family: Operator Mono
+    family: Iosevka Nerd Font Mono
     # Style can be specified to pick a specific face.
-    style: Light
+    #style: Light < for Operator Mono
+    style: Regular
 
   # The bold font face
   bold:
     #family: Monofur for Powerline
-    family: Operator Mono
+    #family: Operator Mono
+    family: Iosevka Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
     #family: Monofur for Powerline
-    family: Operator Mono
+    #family: Operator Mono
+    family: Iosevka Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Italic
   bold_italic:
     #family: Monofur for Powerline
-    family: Operator Mono
+    #family: Operator Mono
       #family: Space Mono
+    family: Iosevka Nerd Font Mono
 
   offset:
     x: 1
