--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -10,13 +10,14 @@ env:
 # Font configuration (changes require restart)
 font:
   # The size to use.
-  size: 12
+  size: 10.5
   # The normal (roman) font face to use.
   normal:
     #family: FiraMono Nerd Font Mono
     #family: Monofur for Powerline
     #family: Operator Mono
-    family: Iosevka Nerd Font Mono
+    #family: Iosevka Nerd Font Mono
+    family: Inconsolata Nerd Font
     # Style can be specified to pick a specific face.
     #style: Light < for Operator Mono
     style: Regular
@@ -25,7 +26,8 @@ font:
   bold:
     #family: Monofur for Powerline
     #family: Operator Mono
-    family: Iosevka Nerd Font Mono
+    #family: Iosevka Nerd Font Mono
+    family: Inconsolata Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
@@ -33,14 +35,16 @@ font:
   italic:
     #family: Monofur for Powerline
     #family: Operator Mono
-    family: Iosevka Nerd Font Mono
+    #family: Iosevka Nerd Font Mono
+    family: Inconsolata Nerd Font
     # Style can be specified to pick a specific face.
     style: Italic
   bold_italic:
     #family: Monofur for Powerline
     #family: Operator Mono
       #family: Space Mono
-    family: Iosevka Nerd Font Mono
+      #family: Iosevka Nerd Font Mono
+    family: Inconsolata Nerd Font
 
   offset:
     x: 1
@@ -76,33 +80,63 @@ font:
   #  white: '0xFFFFFF'
 
 # Colors (iTerm 2 default theme)
+#colors:
+  # Default colors
+  #primary:
+   # background: '#101421'
+    #foreground: '#fffbf6'
+
+ # Normal colors
+  #normal:
+   # black:   '#2e2e2e'
+   # red:     '#eb4129'
+   # green:   '#abe047'
+   # yellow:  '#f6c744'
+   # blue:    '#47a0f3'
+   # magenta: '#7b5cb0'
+   # cyan:    '#64dbed'
+   # white:   '#e5e9f0'
+
+ # Bright colors
+  #bright:
+  #  black:   '#565656'
+  #  red:     '#ec5357'
+  #  green:   '#c0e17d'
+  #  yellow:  '#f9da6a'
+  #  blue:    '#49a4f8'
+  #  magenta: '#a47de9'
+  #  cyan:    '#99faf2'
+  #  white:   '#ffffff'
+
+# Colors (Blood Moon)
 colors:
   # Default colors
   primary:
-    background: '#101421'
-    foreground: '#fffbf6'
+    background: '0x10100E'
+    foreground: '0xC6C6C4'
 
- # Normal colors
+  # Normal colors
   normal:
-    black:   '#2e2e2e'
-    red:     '#eb4129'
-    green:   '#abe047'
-    yellow:  '#f6c744'
-    blue:    '#47a0f3'
-    magenta: '#7b5cb0'
-    cyan:    '#64dbed'
-    white:   '#e5e9f0'
+    black:   '0x10100E'
+    red:     '0xC40233'
+    green:   '0x009F6B'
+    yellow:  '0xFFD700'
+    blue:    '0x0087BD'
+    magenta: '0x9A4EAE'
+    cyan:    '0x20B2AA'
+    white:   '0xC6C6C4'
 
- # Bright colors
+  # Bright colors
   bright:
-    black:   '#565656'
-    red:     '#ec5357'
-    green:   '#c0e17d'
-    yellow:  '#f9da6a'
-    blue:    '#49a4f8'
-    magenta: '#a47de9'
-    cyan:    '#99faf2'
-    white:   '#ffffff'
+    black:   '0x696969'
+    red:     '0xFF2400'
+    green:   '0x03C03C'
+    yellow:  '0xFDFF00'
+    blue:    '0x007FFF'
+    magenta: '0xFF1493'
+    cyan:    '0x00CCCC'
+    white:   '0xFFFAFA'
+
 
 # Background opacity
 #
