--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -7,6 +7,10 @@ env:
   # available, otherwise `xterm-256color` is used.
   TERM: xterm-256color
 
+
+import:
+    - ~/.config/alacritty/themes/dracula.yml
+
 # Font configuration (changes require restart)
 font:
   # The size to use.
@@ -49,94 +53,6 @@ font:
   offset:
     x: 1
     y: 1
-
-# Colors (Ayu Dark)
-#colors:
-#  # Default colors
-#  primary:
-#    background: '0x0A0E14'
-#    foreground: '0xB3B1AD'
-
-#  # Normal colors
-#  normal:
-#    black: '0x01060E'
-#    red: '0xEA6C73'
-#    green: '0x91B362'
-#    yellow: '0xF9AF4F'
-#    blue: '0x53BDFA'
-#    magenta: '0xFAE994'
-#    cyan: '0x90E1C6'
-#    white: '0xC7C7C7'
-
-  # Bright colors
-  #    bright:
-  #    black: '0x686868'
-  #  red: '0xF07178'
-  #  green: '0xC2D94C'
-  #  yellow: '0xFFB454'
-  #  blue: '0x59C2FF'
-  #  magenta: '0xFFEE99'
-  #  cyan: '0x95E6CB'
-  #  white: '0xFFFFFF'
-
-# Colors (iTerm 2 default theme)
-#colors:
-  # Default colors
-  #primary:
-   # background: '#101421'
-    #foreground: '#fffbf6'
-
- # Normal colors
-  #normal:
-   # black:   '#2e2e2e'
-   # red:     '#eb4129'
-   # green:   '#abe047'
-   # yellow:  '#f6c744'
-   # blue:    '#47a0f3'
-   # magenta: '#7b5cb0'
-   # cyan:    '#64dbed'
-   # white:   '#e5e9f0'
-
- # Bright colors
-  #bright:
-  #  black:   '#565656'
-  #  red:     '#ec5357'
-  #  green:   '#c0e17d'
-  #  yellow:  '#f9da6a'
-  #  blue:    '#49a4f8'
-  #  magenta: '#a47de9'
-  #  cyan:    '#99faf2'
-  #  white:   '#ffffff'
-
-# Colors (Blood Moon)
-colors:
-  # Default colors
-  primary:
-    background: '0x10100E'
-    foreground: '0xC6C6C4'
-
-  # Normal colors
-  normal:
-    black:   '0x10100E'
-    red:     '0xC40233'
-    green:   '0x009F6B'
-    yellow:  '0xFFD700'
-    blue:    '0x0087BD'
-    magenta: '0x9A4EAE'
-    cyan:    '0x20B2AA'
-    white:   '0xC6C6C4'
-
-  # Bright colors
-  bright:
-    black:   '0x696969'
-    red:     '0xFF2400'
-    green:   '0x03C03C'
-    yellow:  '0xFDFF00'
-    blue:    '0x007FFF'
-    magenta: '0xFF1493'
-    cyan:    '0x00CCCC'
-    white:   '0xFFFAFA'
-
 
 # Background opacity
 #
