--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,9 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
+bind -n C-S-Left { swap-window -t -1; previous-window }
+bind -n C-S-Right { swap-window -t +1; next-window }
+
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
