--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,8 @@ url_style curly
 open_url_with firefox-developer-edition
 detect_urls yes
 
+copy_on_select yes
+
 # Terminal bell
 enable_audio_bell yes
 window_alert_on_bell yes
