--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
-include ./themes/Afterglow.conf
+include ./themes/my_own_iceberg_dark.conf
 
 selection_background  #f1c40f
 
 # cursor
-cursor_blink_interval 0.5
+cursor_blink_interval 0.2
 cursor_shape block
 cursor_stop_blinking_after 15.0
 cursor_opacity 0.7
@@ -37,4 +37,30 @@ inactive_tab_font_style normal
 inactive_tab_foreground #F8F8F2
 inactive_tab_background #3D4C5F
 
+macos_titlebar_color system
 
+macos_show_window_title_in none
+
+macos_option_as_alt yes
+
+enabled_layouts grid
+
+# Resizing windows
+map cmd+shift+left resize_window narrower
+map cmd+shift+right resize_window wider
+map cmd+shift+up resize_window taller
+map cmd+shift+down resize_window shorter 3
+
+macos_window_resizable yes
+
+font_size 12
+
+#font_family      Iosevka Nerd Font Mono Regular
+#bold_font        Iosevka Nerd Font Mono Bold
+#italic_font      Iosevka Nerd Font Mono Italic
+#bold_italic_font Iosevka Nerd Font Mono Bold Italic
+
+font_family      JetBrains Mono Medium
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
