Change window layout

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,7 +43,7 @@ macos_show_window_title_in none
 
 macos_option_as_alt yes
 
-enabled_layouts grid
+enabled_layouts *
 
 # Resizing windows
 map cmd+shift+left resize_window narrower
