--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -34,13 +34,13 @@ style = "bold white"
 # Displays status of Git repository when in a directory of a Git repository.
 [git_status]
 format = "[$all_status$ahead_behind]($style) "
-ahead = "⇡ $count "
-behind = "⇣ $count "
-deleted = "🗑 $count "
-diverged = " $count "
-stashed = "📦 $count "
-modified = "פֿ $count "
-staged = '[ $count ](green)'
-renamed = " $count "
-untracked = "🤷 ‍$count "
+#ahead = "⇡ $count "
+#behind = "⇣ $count "
+#deleted = "🗑 $count "
+#diverged = " $count "
+#stashed = "📦 $count "
+#modified = "פֿ $count "
+#staged = '[ $count ](green)'
+#renamed = " $count "
+#untracked = "🤷 ‍$count "
 style = "bold red"
